@@ -1,5 +1,10 @@
 2007-08-12  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/web/slaves.py (BuildSlavesResource): new status
+	page (at URL /buildslaves/) to view status of all buildslaves at
+	once, including how long it's been since we last heard from them,
+	and which Builders use them.
+
 	* buildbot/status/web/baseweb.py: fix title of one-line-per-build
 	pages
 
